[package]
name = "typehints-my-apple"
version = "0.1.1"
edition = "2021"
description = "Typehinting for `apple-me-curry`."
repository = "https://github.com/usepen-nostchalk/typehints-my-apple"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
