[package]
name = "typehints-my-apple"
version = "0.1.2"
edition = "2021"
description = "Type hinting and backend for apple-me-curry"
repository = "https://github.com/usepen-nostchalk/typehints-my-apple"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
